{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 9,
  "lineage": "ce33a477-df9d-440b-e1e4-e658959978c5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "unify_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d7405d05f836d0d4",
            "arn": "arn:aws:ec2:us-east-1:767397841100:instance/i-027631ff58fe4f0f4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-027631ff58fe4f0f4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "unify_deploy_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c21af62a80cdaa46",
            "private_dns": "ip-10-0-1-193.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.193",
            "public_dns": "ec2-54-226-218-111.compute-1.amazonaws.com",
            "public_ip": "54.226.218.111",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-032b390a723e8afce",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0342006c673de7d8d",
            "tags": {
              "Aluno": "Lucas Weigel",
              "Name": "Unify-API-Server",
              "Projeto": "Trabalho Final Cloud",
              "Turma": "T28"
            },
            "tags_all": {
              "Aluno": "Lucas Weigel",
              "Name": "Unify-API-Server",
              "Projeto": "Trabalho Final Cloud",
              "Turma": "T28"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a7cb467502010ad6"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.unify_keypair",
            "aws_security_group.unify_sg",
            "aws_subnet.unify_subnet_publica",
            "aws_vpc.unify_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "unify_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397841100:internet-gateway/igw-0c5ffeb7649cb9268",
            "id": "igw-0c5ffeb7649cb9268",
            "owner_id": "767397841100",
            "tags": {
              "Aluno": "Lucas Weigel",
              "Name": "Unify-API-Server",
              "Projeto": "Trabalho Final Cloud",
              "Turma": "T28"
            },
            "tags_all": {
              "Aluno": "Lucas Weigel",
              "Name": "Unify-API-Server",
              "Projeto": "Trabalho Final Cloud",
              "Turma": "T28"
            },
            "vpc_id": "vpc-050a6b675d9deec9d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.unify_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "unify_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397841100:route-table/rtb-048aed135a6868cf8",
            "id": "rtb-048aed135a6868cf8",
            "owner_id": "767397841100",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c5ffeb7649cb9268",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Aluno": "Lucas Weigel",
              "Name": "Unify-API-Server",
              "Projeto": "Trabalho Final Cloud",
              "Turma": "T28"
            },
            "tags_all": {
              "Aluno": "Lucas Weigel",
              "Name": "Unify-API-Server",
              "Projeto": "Trabalho Final Cloud",
              "Turma": "T28"
            },
            "timeouts": null,
            "vpc_id": "vpc-050a6b675d9deec9d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.unify_igw",
            "aws_vpc.unify_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "unify_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06adc6fcb41898f9c",
            "route_table_id": "rtb-048aed135a6868cf8",
            "subnet_id": "subnet-0342006c673de7d8d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.unify_igw",
            "aws_route_table.unify_rt",
            "aws_subnet.unify_subnet_publica",
            "aws_vpc.unify_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "unify_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397841100:security-group/sg-0a7cb467502010ad6",
            "description": "Permitir SSH e trafego para a API na porta 3000",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a7cb467502010ad6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "API Unify Node.js",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "unify_sg",
            "name_prefix": "",
            "owner_id": "767397841100",
            "revoke_rules_on_delete": false,
            "tags": {
              "Aluno": "Lucas Weigel",
              "Name": "Unify-API-Server",
              "Projeto": "Trabalho Final Cloud",
              "Turma": "T28"
            },
            "tags_all": {
              "Aluno": "Lucas Weigel",
              "Name": "Unify-API-Server",
              "Projeto": "Trabalho Final Cloud",
              "Turma": "T28"
            },
            "timeouts": null,
            "vpc_id": "vpc-050a6b675d9deec9d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.unify_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "unify_subnet_publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397841100:subnet/subnet-0342006c673de7d8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0342006c673de7d8d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397841100",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Aluno": "Lucas Weigel",
              "Name": "Unify-API-Server",
              "Projeto": "Trabalho Final Cloud",
              "Turma": "T28"
            },
            "tags_all": {
              "Aluno": "Lucas Weigel",
              "Name": "Unify-API-Server",
              "Projeto": "Trabalho Final Cloud",
              "Turma": "T28"
            },
            "vpc_id": "vpc-050a6b675d9deec9d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.unify_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "unify_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397841100:vpc/vpc-050a6b675d9deec9d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01acaf2818294e1a1",
            "default_route_table_id": "rtb-0206ab99b0470887a",
            "default_security_group_id": "sg-0cf577bf2a34fc649",
            "dhcp_options_id": "dopt-0f6e441aa51931aab",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-050a6b675d9deec9d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0206ab99b0470887a",
            "owner_id": "767397841100",
            "tags": {
              "Aluno": "Lucas Weigel",
              "Name": "Unify-API-Server",
              "Projeto": "Trabalho Final Cloud",
              "Turma": "T28"
            },
            "tags_all": {
              "Aluno": "Lucas Weigel",
              "Name": "Unify-API-Server",
              "Projeto": "Trabalho Final Cloud",
              "Turma": "T28"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}